Чтение информации о ОЗУ, вывод в консоль

--- a/ComputerInformation (C#)/ComputerInformation/ComputerInformation/ComputerInformation.csproj
+++ b/ComputerInformation (C#)/ComputerInformation/ComputerInformation/ComputerInformation.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A95DC7AA-B215-465D-8DE8-8C3500453734}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ComputerInformation</RootNamespace>
     <AssemblyName>ComputerInformation</AssemblyName>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
