--- a/ComputerInformation (C#)/ComputerInformation/CompInfoConsole/CompInfoConsole.csproj
+++ b/ComputerInformation (C#)/ComputerInformation/CompInfoConsole/CompInfoConsole.csproj
@@ -56,7 +56,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="config.ini">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
